--- a/public/scss/modules/_utility.scss
+++ b/public/scss/modules/_utility.scss
@@ -135,6 +135,8 @@
 	##{$id}:target::before {
 		display: block;
 		border-right: 10px solid $white;
+		-webkit-backface-visibility: hidden;
+		
 		//width: 100%; media query
 	}
 }
